# tiny-agent

./: .gitignore  CHANGELOG.md  DOCUMENTATION_INDEX.md  INSTALL.md  MINIMAL_MVP_GUIDE.md  MVP_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  SPEC.md  SPEC_v2.md  pyproject.toml  requirements.txt
clawlite/: __init__.py  __main__.py  config.py  feeds.py  ollama_client.py  orchestrator.py  protocol.py  schemas.py
clawlite/agents/: __init__.py  broker.py  chat.py  executor.py
clawlite/skills/: __init__.py  base.py  doc_open.py  write_file.py
clawlite/tools/: __init__.py  action_items.py  doc_compare.py  doc_open.py  email_draft.py  meeting_minutes.py  summarize.py  web_search.py  write_file.py
tests/: __init__.py  test_individual_summaries.sh  test_protocol.py  test_schemas.py  test_summaries.py
tests/fixtures/invoices/: README.md  invoice_2025_11_contractor_a.md  invoice_2025_12_contractor_b.md  invoice_2025_12_contractor_c.md  invoice_2026_01_contractor_a.md  invoice_2026_01_contractor_c.md
