[project]
name = "clawlite"
version = "0.2.0"
description = "Tiny Agent for Local LLMs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
clawlite = "clawlite.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
